--- a/_includes/script.html
+++ b/_includes/script.html
@@ -3,10 +3,10 @@
 <script type="text/javascript" src="{{site.baseurl}}/static/js/search.js?t={{ buildAt }}"></script>
 
 {%- if site.extClickEffect %}
-<!-- 点击页面文字冒出特效 -->
+<!-- ページをクリックした後の文字に特効が現れます -->
 <script>
 ;(function(){
-  var textArr = ['富强', '民主', '文明', '和谐', '自由', '平等', '公正', '法治', '爱国', '敬业', '诚信', '友善']
+  var textArr = ['あぁ', 'バカ', 'へんたい', 'うるさい']
   window.blog.initClickEffect(textArr)
 })()
 </script>
