--- a/_layouts/mypost.html
+++ b/_layouts/mypost.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html lang="ja">
 {% include head.html -%}
 <body ondragstart="return false;">
 {% include header.html -%}
 <div class="page page-post">
   <h1 class="title" id="{{ page.title }}">{{ page.title }}</h1>
   {% if page.date %}
-  <div class="subtitle">{{site.author}} 于 {{ page.date | date: "%Y-%m-%d" }} 发布</div>
+  <div class="subtitle">投稿者：{{site.author}}　投稿日：{{ page.date | date: "%Y-%m-%d" }}</div>
   {% endif %}
   <div class="post">
     {{ content }}
