--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html lang="ja">
 {% include head.html -%}
 <body ondragstart="return false;">
 {% include header.html -%}
