--- a/_includes/script.html
+++ b/_includes/script.html
@@ -6,7 +6,7 @@
 <!-- 点击页面文字冒出特效 -->
 <script>
 ;(function(){
-  var textArr = ['バカ','うるさい','へんたい','あれ','あぁ'] //单引号框词，逗号隔开
+  var textArr = ['バカ','うるさい','へんたい','あれ','あぁ','行くぞ','知らない'] //单引号框词，逗号隔开
   window.blog.initClickEffect(textArr)
 })()
 </script>
