--- a/_includes/script.html
+++ b/_includes/script.html
@@ -6,7 +6,7 @@
 <!-- 点击页面文字冒出特效 -->
 <script>
 ;(function(){
-  var textArr = ['バカ','うるさい','へんたい','あれ','あぁ','行くぞ','知らない'] //单引号框词，逗号隔开
+  var textArr = ['富强', '民主', '文明', '和谐', '自由', '平等', '公正', '法治', '爱国', '敬业', '诚信', '友善']
   window.blog.initClickEffect(textArr)
 })()
 </script>
