--- a/_includes/ext-adsense.html
+++ b/_includes/ext-adsense.html
@@ -1,9 +1,3 @@
 <!-- Google Adsense -->
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-client="ca-pub-2491160711122162"
-     data-ad-slot="6446850432"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
+<script data-ad-client="ca-pub-2491160711122162" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
