--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -6,5 +6,6 @@
 {{ content }}
 {% include footer.html -%}
 {% include script.html -%}
+<script data-ad-client="ca-pub-2491160711122162" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </body>
 </html>
