--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -7,5 +7,14 @@
 {% include footer.html -%}
 {% include script.html -%}
 <script data-ad-client="ca-pub-2491160711122162" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZD0WT3YWWH"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-ZD0WT3YWWH');
+</script>
 </body>
 </html>
